# EdcellenceEdPEx

./: .gitignore  AUTHORS_UPDATED.txt  CLEANUP_COMPLETE.txt  COMMERCIAL_GRADE_UPGRADE.md  CONTRIBUTING.md  CREATE_AND_UPLOAD.bat  CREATE_GITHUB_REPO.md  FUNDING_IRB_REMOVED.txt  GITHUB_SETUP.md  IEEE_ACCESS_SUBMISSION_GUIDE.md  LICENSE  MANIFEST.in  MANUSCRIPT_READY_TH.md  QUICK_START.md  README.md  README_ADDED.txt  READY_FOR_UPLOAD.txt  READY_TO_UPLOAD.txt  REPOSITORY_SETUP_COMPLETE.md  SETUP.txt  TEST_REPORT.md  UPLOAD_SUCCESS.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup-venv.bat  setup-venv.sh  setup.py
data/sample/: organizational_data.json
docs/: VISUALIZATION_GALLERY.md
edcellence/: __init__.py  _version.py
edcellence/algorithms/: __init__.py  adli_scoring.py
edcellence/data/: __init__.py
edcellence/visualizations/: __init__.py
examples/: __init__.py  advanced_visualizations_demo.py  complete_demo.py
manuscript_figures/: MANUSCRIPT_FIGURES_README.md
notebooks/: 01_Framework_Complete_Demo.ipynb  02_Advanced_Visualizations.ipynb
src/algorithms/: letci_scoring.py  organizational_scoring.py
src/visualizations/: __init__.py  advanced_visualizer.py  scoring_visualizer.py
tests/: __init__.py  conftest.py  test_organizational_scoring.py
tools/: fix_notebook_01.py  fix_notebook_02.py
